# website

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  Dockerfile  Makefile  Procfile  README.md  app.json  azure-pipelines.yml  blog.xml  convert_content.py  environment.yml  index.html  init.sh  opencode.json  package-lock.json  personal-site.lektorproject  pyproject.toml  reinstall.py  requirements.txt  update_env.sh
.cursor/commands/: build-website.md  deduplicate-agentsmd.md  headings.md  match-tone.md  rebuild-environment.md  remember.md
.devcontainer/: devcontainer.json
.github/workflows/: build-website.yml  merge-schedule.yml  preview-website.yml  update-actions.yml
.opencode/commands/: schedule-post.md
apis/blogbot/: api.py  app.ipynb  glm.py  images.py  models.py  prompts.py  requirements.txt  scraper.py
apis/embedder/: README.md  blog_browser.py  chat_blog.py  embed_blog.py  lr_parser.py
assets/: robots.txt
assets/static/: local-overrides.css  style.css
assets/structured-content/: opensource-projects.yaml
bio/: index.html
blog/: index.html
blog-tags/: index.html
blog/points-of-view/: index.html
blogbot/: api.py
configs/: atom.ini  disqus-comments.ini  markdown-highlighter.ini  tags.ini
content/: contents.lr  resume.html
content/bio/: contents.lr
content/blog/: contents.lr
content/books/: contents.lr
content/cv/: contents.lr  skills.ipynb
content/open-source/: contents.lr
content/open-source-projects/: contents.lr
content/projects/: contents.lr
content/research/: contents.lr
content/resume/: contents.lr
content/sitemap.xml/: contents.lr
content/talks/: contents.lr
content/teaching/: contents.lr
content/testimonials/: contents.lr
content/user-manual/: contents.lr
databags/: nav.json
flowblocks/: book.ini  description.ini  github.ini  notebooks.ini  resource.ini  resume-education.ini  resume-experience.ini  resume-skills.ini  slides.ini  youtube.ini
models/: all-tags.ini  blog-post.ini  blog.ini  html.ini  open-source.ini  project.ini  projects-carousel.ini  projects-collapse.ini  projects.ini  resume.ini  talks.ini  testimonial.ini  testimonials.ini
notebooks/: blogbot_scraper.ipynb  llamabot.ipynb
open-source/: index.html
open-source/bokeh-plots/: index.html
open-source/cupy/: index.html
open-source/dask-and-related-libraries/: index.html
open-source/jax-unirep/: index.html
open-source/matplotlib/: index.html
open-source/nxviz/: index.html
open-source/pyflatten/: index.html
open-source/pyjanitor/: index.html
open-source/pymc3/: index.html
open-source/pymc4/: index.html
projects/: index.html
projects/bayesian-analysis-recipes/: index.html
projects/deep-phenotype-learning/: index.html
projects/essays-on-data-science/: index.html
projects/flu-forecaster/: index.html
projects/influenza-ecology-and-evolution/: index.html
projects/open-hardware-for-wildlife-monitoring/: index.html
research/: index.html
research/high-throughput-viral-phenotyping/: index.html
research/influenza-ecology-and-reticulate-evolution/: index.html
research/molecular-characterization-of-influenza-a-viruses/: index.html
scripts/: 02-year-in-review-tagging.py  03-year-in-review-formatting.py  build_search_index.py  convert_to_webp.py  count_posts_by_tag.py  fetch_github_data.py  generate_favicons.py  resize_images.py
scripts/year-in-review/: 01-scrape.py  content_stopwords.txt
static/: pygments.css
talks/: index.html
talks/an-attempt-at-demystifying-bayesian-deep-learning/: index.html
talks/bayesian-statistical-analysis-with-pymc3/: index.html
talks/beyond-two-groups-generalized-abcde-testing/: index.html
talks/modern-principled-data-science-workflow/: index.html
teaching/: index.html
teaching/datacamp/: index.html
templates/: all-tags.html  blog-post.html  blog.html  layout.html  open-source.html  page.html  project.html  projects-carousel.html  projects-collapse.html  projects.html  resume.html  sitemap.xml  tag.html  tags.html  testimonial.html  testimonials.html
transcripts/: 2025-07-21-llamabot-graph-memory.md
video-editor/: index.html  package-lock.json  package.json  tsconfig.json
(+1117 files in other folders)
