[project]
name = "ericmjl-website"
version = "0.0.1"
requires-python = "==3.11"
description = "Eric Ma's Personal Website"

[tool.setuptools.packages.find]
where = [""]
namespaces = false

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
lint.select = ["E", "F", "I"]
lint.ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
ericmjl-website = { path = ".", editable = true }
lektor = "==3.4.0b4"
llamabot = ">=0.5.0"

[tool.pixi.tasks]
website = "lektor server --port 5959 --host 0.0.0.0"
blogbot = "panel serve apis/blogbot/app.ipynb --address 0.0.0.0 --allow-websocket-origin=0.0.0.0:5006 --dev"

[tool.pixi.dependencies]
python = "==3.11"
nbconvert = "*"
flask = "*"
requests = "*"
jinja2 = "*"
pre-commit = "*"
ipykernel = "*"
jupyterlab = "*"
tqdm = "*"
werkzeug = "<3"
mistune = "<3"
panel = "*"
numpy = "<2"
