[project]
name = "ericmjl-website"
version = "0.0.1"
requires-python = "==3.11"
description = "Eric Ma's Personal Website"

[tool.setuptools.packages.find]
where = [""]
namespaces = false

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
lint.select = ["E", "F", "I"]
lint.ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
[tool.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10
target-version = "py310"

[tool.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.feature.blogbot.dependencies]
panel = "*"
nbconvert = "*"
ipykernel = "*"
jupyterlab = "*"
tqdm = "*"
numpy = "<2"
pydantic = ">=2.8.2,<3"

[tool.pixi.feature.blogbot.pypi-dependencies]
llamabot = ">=0.5.1"

[tool.pixi.feature.devtools.dependencies]
pre-commit = "*"

[tool.pixi.feature.lektor.pypi-dependencies]
lektor = "==3.4.0b4"

[tool.pixi.feature.lektor.dependencies]
python = "==3.11"
mistune = "<3"
werkzeug = "<3"

[tool.pixi.feature.lektor.tasks]
website = "lektor server --port 5959 --host 0.0.0.0"
build = "lektor build --output-path site/"

[tool.pixi.environments]
default = ["lektor", "devtools"]
blogbot = ["blogbot", "devtools"]
